--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,11 @@
   "description": "Opens any Blackboard Ultra files in new tabs",
   "version": "1.0.4",
   "manifest_version": 3,
-  "action": {
-    "default_icon": "images/external-link.png"
+  "icons": {
+    "16": "images/icon/16.png",
+    "32": "images/icon/32.png",
+    "48": "images/icon/48.png",
+    "128": "images/icon/128.png"
   },
   "content_scripts": [
     {
